--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,22 @@ buildscript{
 	ext{
 		queryDslVersion = "5.0.0"
 	}
+	repositories {
+		jcenter()
+	}
+	dependencies {
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.8.RELEASE"
+		classpath 'org.springframework:springloaded:1.2.0.RELEASE'
+	}
+
 }
 
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.10'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'idea'
+
 }
 
 group = 'com.myplantsdiary'
@@ -55,6 +65,13 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+idea {
+	module {
+		inheritOutputDirs = false
+		outputDir = file("$buildDir/classes/main/")
+	}
 }
 
 compileJava.dependsOn('clean')
