--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.show-sql=true
 
 #logging.level.sql=trace
 logging.level.com.zaxxer=info
+
+
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+org.zerock.upload.path=upload
