API 서버를 위한 Security 기본 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,13 @@ spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #logging.level.sql=trace
-logging.level.com.zaxxer=info
+logging.level.com.zaxxer=debug
 
 
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
 org.zerock.upload.path=upload
+
+
+logging.level.org.springframework.security.web=trace
