--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 
 	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
+
 
 }
 
