--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ dependencies {
 	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 
 
 }
